err/django-bpmobile.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/IPy-0.83.egg-info'...
Listing './lib/python3.5/site-packages/bpmobile'...
Listing './lib/python3.5/site-packages/bpmobile/data'...
Listing './lib/python3.5/site-packages/bpmobile/data/arib'...
Listing './lib/python3.5/site-packages/bpmobile/data/docomo'...
Listing './lib/python3.5/site-packages/bpmobile/data/icu'...
Listing './lib/python3.5/site-packages/bpmobile/data/kddi'...
Listing './lib/python3.5/site-packages/bpmobile/data/softbank'...
Listing './lib/python3.5/site-packages/bpmobile/e4u'...
Compiling './lib/python3.5/site-packages/bpmobile/e4u/arib2ucm.py'...
***   File "./lib/python3.5/site-packages/bpmobile/e4u/arib2ucm.py", line 45
    print "<U%s> \\x%s\\x%s |0  # ARIB-%s" % (uni, sjis[0:2], sjis[2:4], arib)
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bpmobile/e4u/emoji4unicode_test.py'...
***   File "./lib/python3.5/site-packages/bpmobile/e4u/emoji4unicode_test.py", line 50
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bpmobile/e4u/report_img_from.py'...
***   File "./lib/python3.5/site-packages/bpmobile/e4u/report_img_from.py", line 63
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bpmobile/e4u/row_cell_test.py'...
***   File "./lib/python3.5/site-packages/bpmobile/e4u/row_cell_test.py", line 53
    self.assertEqual(rc + 2, row_cell.RowCell(94, 01))
                                                   ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/bpmobile/e4u/unicode_names_test.py'...
***   File "./lib/python3.5/site-packages/bpmobile/e4u/unicode_names_test.py", line 55
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bpmobile/management'...
Listing './lib/python3.5/site-packages/bpmobile/management/commands'...
Compiling './lib/python3.5/site-packages/bpmobile/management/commands/runserver_imode.py'...
***   File "./lib/python3.5/site-packages/bpmobile/management/commands/runserver_imode.py", line 64
    print "Validating models..."
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bpmobile/media'...
Listing './lib/python3.5/site-packages/bpmobile/media/img'...
Listing './lib/python3.5/site-packages/bpmobile/media/img/emoticons'...
Listing './lib/python3.5/site-packages/bpmobile/templatetags'...
Compiling './lib/python3.5/site-packages/bpmobile/wsgi.py'...
***   File "./lib/python3.5/site-packages/bpmobile/wsgi.py", line 10
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_bpmobile-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/uamobile'...
Compiling './lib/python3.5/site-packages/uamobile/base.py'...
***   File "./lib/python3.5/site-packages/uamobile/base.py", line 12
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uamobile/cidrdata'...
Compiling './lib/python3.5/site-packages/uamobile/ezweb.py'...
***   File "./lib/python3.5/site-packages/uamobile/ezweb.py", line 18
    except (KeyError, ValueError), e:
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uamobile/factory'...
Compiling './lib/python3.5/site-packages/uamobile/parser.py'...
***   File "./lib/python3.5/site-packages/uamobile/parser.py", line 341
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/uamobile/utils'...
Listing './lib/python3.5/site-packages/uamobile-0.2.16.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
